...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:id="@+id/linearlayout"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:text="Log In"
            android:textSize="10sp" />

    </LinearLayout>


</LinearLayout>
