...
<item
    android:id="@+id/navigation_aboutus"
    android:title="Aboutus"
    android:icon="@android:drawable/ic_dialog_map"
    />
<item
    android:id="@+id/navigation_settings"
    android:title="Settings"
    android:icon="@drawable/ic_baseline_settings_24"
    />
    <item
        android:id="@+id/navigation_noti"
        android:title="Notification"
        android:icon="@drawable/ic_notifications_black_24dp"
...
