...
            android:gravity="center"
            android:textSize="25sp"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Edit Profile"
            android:textColor="#FFFFFF"
            app:icon="@android:drawable/ic_menu_edit" />
    </LinearLayout>
</ScrollView>
